# brontes

./: .anodizer.yaml  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  Taskfile.yml  clippy.toml  coverage.json  deny.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/make-mcp/: main.rs
src/: annotations.rs  command.rs  config.rs  error.rs  exec.rs  lib.rs  selector.rs  selectors.rs  tool.rs  walk.rs
src/manager/: claude.rs  cursor.rs  mod.rs  paths.rs  vscode.rs  zed.rs
src/schema/: args.rs  cache.rs  flag.rs  mod.rs  types.rs
src/server/: http.rs  mod.rs  stdio.rs
src/subcommands/: common.rs  mod.rs  signal.rs  start.rs  stream.rs  tools.rs
src/subcommands/editor/: claude.rs  cursor.rs  mod.rs  vscode.rs  zed.rs
tests/: annotations_parity.rs  custom_command_name.rs  divergences_parity.rs  edge_cases_adversarial.rs  edge_cases_input.rs  editor_error_paths.rs  example_make_mcp.rs  generate_tools.rs  generate_tools_golden.rs  generate_tools_perf.rs  handle_errors.rs  manager_claude.rs  manager_cursor.rs  manager_vscode.rs  manager_zed.rs  middleware_execution.rs  run_from_smoke.rs  selectors_parity.rs  server_http_smoke.rs  server_stdio_helper.rs  server_stdio_smoke.rs  stream_run_smoke.rs  tool_name.rs  tools_integration.rs  warn_fires.rs
tests/fixtures/: generate_tools_golden.json
tests/support/: mod.rs
