[package]
name = "brontes"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Transform any clap CLI into an MCP server."
authors = ["TJ Smith"]
license = "MIT"
repository = "https://github.com/tj-smith47/brontes"
homepage = "https://github.com/tj-smith47/brontes"
documentation = "https://docs.rs/brontes"
readme = "README.md"
keywords = ["cli", "clap", "mcp", "model-context-protocol", "ai"]
categories = ["command-line-interface", "development-tools"]

[lib]
name = "brontes"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "string", "wrap_help"] }
rmcp = { version = "1.6", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
    "io-util",
    "io-std",
    "sync",
] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
