[package]
name = "brontes"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Transform any clap CLI into an MCP server."
authors = ["TJ Smith"]
license = "MIT"
repository = "https://github.com/tj-smith47/brontes"
homepage = "https://github.com/tj-smith47/brontes"
documentation = "https://docs.rs/brontes"
readme = "README.md"
keywords = ["cli", "clap", "mcp", "model-context-protocol", "ai"]
categories = ["command-line-interface", "development-tools"]

[lib]
name = "brontes"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "string", "wrap_help"] }
rmcp = { version = "1.6", features = [
    "server",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
schemars = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "process",
    "io-util",
    "io-std",
    "sync",
    "net",
    "time",
] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
futures = "0.3"
tempfile = "3"
# HTTP runtime for the `mcp stream` streamable-HTTP transport. The rmcp
# `StreamableHttpService` is `tower_service::Service<Request<Incoming>>`;
# we wire it directly to hyper's per-connection serve loop and use
# `hyper-util::TokioIo` to bridge tokio AsyncRead/AsyncWrite to hyper's
# IO traits. Axum would also work but pulls ~50 transitive deps; the
# direct hyper path costs ~5.
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server"] }
http-body-util = "0.1"
# `StreamableHttpService` only implements `tower_service::Service`; we
# call it directly without the heavier `tower` builder layers.
tower-service = "0.3"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.6", features = [
    "server",
    "client",
    "transport-io",
    "transport-streamable-http-server",
    "schemars",
] }
# Smoke-test the streamable-HTTP transport by POSTing real HTTP/1.1 to a
# bound port. `reqwest` is rmcp's chosen smoke-test client and is already
# present in its dev-dep graph.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
